<?xml version='1.0' encoding='utf-8'?>
<package format="2">

  <name>soem_interface</name>
  <version>0.4.0</version>
  <description>C++ library to create multiple ethercat devices on one or multiple buses. Contains abstract base classes for the communication interface.</description>

  <license>GPLv3</license>

  <author>Markus Staeuble</author>
  <author email="jungerj@student.ethz.ch">Jonas Junger</author>
  <author email="johannes.pankert@mavt.ethz.ch">Johannes Pankert</author>
  <author>Lennart Nachtigall</author>


  <maintainer email="pankertj@ethz.ch">Johannes Pankert</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>message_logger</depend>
  <depend>soem_ros2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
